@@ -33,3 +33,16 @@
 #ifndef DUNGEON_PERLIN_SCALE_Y
 #define DUNGEON_PERLIN_SCALE_Y 0.3f
 #endif
+
+
+#ifndef DUNGEON_PRINT_HARDNESS
+#define DUNGEON_PRINT_HARDNESS 1
+#endif
+
+#ifndef DUNGEON_PRINT_BORDER
+#define DUNGEON_PRINT_BORDER 0
+#endif
+
+#ifndef DUNGEON_FILE_NAME
+#define DUNGEON_FILE_NAME "/dungeon"
+#endif
