@@ -1,6 +1,7 @@
 #pragma once
 
 #include <stdio.h>
+#include <sys/time.h>
 
 #ifndef ENABLE_DEBUG_PRINTS
 #define ENABLE_DEBUG_PRINTS 0
@@ -8,6 +9,22 @@
 
 #if ENABLE_DEBUG_PRINTS
     #define PRINT_DEBUG(...) printf(__VA_ARGS__);
+    #define IF_DEBUG(x) x
 #else
     #define PRINT_DEBUG(...)
+    #define IF_DEBUG(...)
 #endif
+
+
+static inline uint32_t us_seed()
+{
+    static struct timeval tv;
+    gettimeofday(&tv, NULL);
+    return (tv.tv_usec ^ (tv.tv_sec << 20)) & 0xFFFFFFFFU;
+}
+static inline uint64_t us_time()
+{
+    static struct timeval tv;
+    gettimeofday(&tv, NULL);
+    return ((uint64_t)tv.tv_sec * 1000000) + (uint64_t)tv.tv_usec;
+}
